# prompt-lint

./: .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: claude-task.yml
editors/vscode/: README.md  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/zed/: README.md
examples/: task_acceptance.prompt.md  task_prioritization.prompt.md
src/prompt_lint/: __init__.py  __main__.py  cli.py  models.py  parser.py  validator.py
src/prompt_lint/lsp/: __init__.py  server.py
src/prompt_lint/rules/: __init__.py  frontmatter.py  output_reachable.py  required_sections.py  variable_defined.py  variable_unused.py
tests/: conftest.py  test_cli.py  test_lsp.py  test_parser.py  test_validator.py
tests/fixtures/: code_block_refs.prompt.md  empty_section.prompt.md  incomplete_frontmatter.prompt.md  japanese_headings.prompt.md  missing_frontmatter.prompt.md  missing_sections.prompt.md  undefined_variable.prompt.md  unreachable_output.prompt.md  unused_variable.prompt.md  valid_minimal.prompt.md
tests/test_rules/: test_frontmatter.py  test_output_reachable.py  test_required_sections.py  test_variable_defined.py  test_variable_unused.py
