[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-lint"
version = "0.1.0"
description = "Static analysis tool for structured .prompt.md files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Naoto Sodeyama" },
]
keywords = ["prompt", "lint", "static-analysis", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
lsp = [
    "pygls>=2.0",
    "lsprotocol",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "pygls>=2.0",
    "lsprotocol",
]

[project.scripts]
prompt-lint = "prompt_lint.cli:main"
prompt-lint-lsp = "prompt_lint.lsp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_lint"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
